<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp"
        tools:layout_editor_absoluteY="49dp" />

    <LinearLayout
        android:id="@+id/layout_username"
        android:layout_below="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="40dp"
        android:background="#35ffffff">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            app:srcCompat="@mipmap/ic_human" />

        <EditText
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@android:color/transparent"
            android:textColorHint="@color/white"
            android:hint="@string/login_username" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_below="@id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:background="#35ffffff">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            app:srcCompat="@android:drawable/ic_dialog_info" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@android:color/transparent"
            android:textColorHint="@color/white"
            android:hint="@string/login_password"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        android:text="@string/button_login" />

    <TextView
        android:id="@+id/textView_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/textview_forgot" />


    <TextView
        android:id="@+id/sign_with"
        android:layout_above="@id/layout_sites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_with" />

    <LinearLayout
        android:id="@+id/layout_sites"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageFaceBook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/fb" />

        <ImageView
            android:id="@+id/imageTwitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/twitter" />
    </LinearLayout>


</RelativeLayout>